--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -26,6 +26,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@200&family=Sixtyfour&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Hahmlet&family=Noto+Sans+KR:wght@200&family=Sixtyfour&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 article, aside, details,
 figcaption, figure,
 footer, header, hgroup,
