--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -887,6 +887,12 @@ body:not(.post-template) .post-title {
     display: none;
 }
 
+.post-content .small-img {
+    width: 50%;
+    max-width: none;
+    margin: 0 -13%;
+}
+
 /* Keep images centred and within the bounds of the post-width */
 .post-content img {
     display: block;
