--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -676,7 +676,7 @@ margin on the iframe, cause it breaks stuff. */
 
 .page-description {
     margin: 0;
-    font-size: 2rem;
+    font-size: 1rem;
     line-height: 1.5em;
     font-weight: 400;
     font-family: 'Noto Sans KR', sans-serif;
@@ -695,7 +695,7 @@ margin on the iframe, cause it breaks stuff. */
 }
 
 .no-cover .page-description {
-    color: rgba(0,0,0,0.5);
+    color: rgba(137, 137, 137, 0.5);
 }
 
 .no-cover .main-nav.overlay .back-button,
@@ -803,10 +803,11 @@ body:not(.post-template) .post-title {
     display: inline-block;
     margin-left: 8px;
     padding-left: 12px;
-    border-left: #d5dbde 1px solid;
+    /* border-left: #d5dbde 1px solid; */
     text-transform: uppercase;
     font-size: 1.3rem;
     white-space: nowrap;
+    float: right;
 }
 
 .user-image {
