--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -27,6 +27,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@200&family=Sixtyfour&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Hahmlet&family=Noto+Sans+KR:wght@200&family=Sixtyfour&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbit&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Orbit&display=swap');
 article, aside, details,
 figcaption, figure,
 footer, header, hgroup,
@@ -179,7 +181,9 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: 'Noto Sans KR', sans-serif;
+    /* font-family: 'Noto Sans KR', sans-serif; */
+    /* font-family: "Orbit", sans-serif; */
+    font-family: "Gothic A1", sans-serif;
     letter-spacing: 0.01rem;
     font-size: 1.8rem;
     line-height: 1.75em;
@@ -1783,6 +1787,15 @@ body:not(.post-template) .post-title {
                 transform: translateY(-5px) rotate(-90deg);
     }
 }
+
+.important {
+    /* color: #4646d3; */
+    /* background-color: #fdf0fd; */
+    font-weight: bold;
+    text-shadow: 6px 6px 12px rgba(162, 255, 0, 0.5); 
+    /* text-decoration: underline; */
+}
+
 
 /* ==========================================================================
    End of file. Animations should be the last thing here. Do not add stuff
