--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -198,7 +198,7 @@ body {
 }
 
 ::selection {
-    background: #D6EDFF;
+    background: #ecefff;
 }
 
 h1, h2, h3,
@@ -206,9 +206,9 @@ h4, h5, h6 {
     -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-    color: #2E2E2E;
+    color: #303030;
     line-height: 1.15em;
-    margin: 0 0 0.4em 0;
+    margin: 0 0 0.8em 0;
     font-family: 'Hahmlet', serif;
 }
 
@@ -240,12 +240,13 @@ h6 {
 }
 
 a {
-    color: #4A4A4A;
+    color: #6b6b6b;
     transition: color ease 0.3s;
 }
 
 a:hover {
-    color: #111;
+    /* text-shadow: 6px 6px 12px rgba(162, 255, 0, 0.5);  */
+    color: #3f326b;
 }
 
 p, ul, ol, dl {
@@ -335,10 +336,10 @@ code, tt {
     padding: 1px 3px;
     font-family: "Source Code Pro", monospace;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    font-weight: weight;
     font-style: normal;
     white-space: pre-wrap;
-    border: #E3EDF3 1px solid;
+    border: #e4f5ff 1px solid;
     background: #F7FAFB;
     border-radius: 2px;
 }
@@ -350,11 +351,11 @@ pre {
     border: #E3EDF3 1px solid;
     width: 100%;
     padding: 10px;
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: "Source Code Pro", monospace;
     font-size: 0.9em;
     white-space: pre;
     overflow: auto;
-    background: #F7FAFB;
+    background: #e9e9e9;
     border-radius: 3px;
 }
 
@@ -675,7 +676,7 @@ margin on the iframe, cause it breaks stuff. */
     letter-spacing: -1px;
     font-weight: 700;
     font-family: 'Sixtyfour', sans-serif;
-    color: #fff;
+    color: #ffffff;
 }
 
 .page-description {
